[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "n4cluster-icp-finder"
version = "0.1.0"
description = "Restaurant ICP identification and scoring system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.30.0",
    "alembic>=1.13.0",
    "celery[redis]>=5.4.0",
    "httpx>=0.27.0",
    "tenacity>=9.0.0",
    "structlog>=24.4.0",
    "pydantic-settings>=2.5.0",
    "scikit-learn>=1.5.0",
    "numpy>=1.26.0",
    "openai>=1.40.0",
    "anthropic>=0.34.0",
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0",
    "httpx>=0.27.0",
    "factory-boy>=3.3.0",
    "ruff>=0.5.0",
]

[project.scripts]
icp-server = "src.main:run"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-report=xml"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "alembic/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A"]
# TODO: Remove these ignores after NIF-249/250 cleanup sprint
ignore = [
    "E501",   # line-too-long — handled by formatter
    "B008",   # function-call-in-default-argument — FastAPI Depends() pattern
    "B904",   # raise-without-from-inside-except — too noisy to fix now
    "N806",   # variable-in-function-should-be-lowercase — SQLAlchemy model pattern
    "N815",   # mixed-case-variable-in-class-scope — SQLAlchemy pattern
    "UP007",  # use-x-or-y-for-union — pre-3.10 compat in some files
    "A001",   # builtin-variable-shadowing — 'id', 'type' params common in models
    "A002",   # builtin-argument-shadowing — same
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N", "B"]   # naming and boolean trap rules too strict in tests

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
strict_optional = true
exclude = ["alembic/"]
# TODO: Enable stricter checks in NIF-249/250
disallow_untyped_defs = false
check_untyped_defs = false
